      * Improved and simplified the look of the interface
         * Interface is much more slick
         * Font uses outlines to be more readable
      * Added rarity indicator to ships and outfits.
      * Indicate non-common NPC with exclamation marks.
      * Added accessory slot and unique accessory outfits as mission rewards.
      * Simple economy model implemented with map visualizations
      * Made missiles and fighter bays reload while in space
      * Modified the balancing of missiles
      * Added asteroids and mining
      * Improved player GUI
      * Brushed GUI is now the default
      * Improved and fixed escort system
      * Made Pirates and FLF spawn in a fairer way
      * Made time pass at different rates for different ships ("Time Dilation")
      * Made piracy missions available from any Independent or black market planet
      * Substantially increased pay for unique missions (10x in most cases)
      * Made references to the player gender-neutral
      * Made combat music vary from faction to faction
      * Made it so AI ships spawn with cargo
      * Added the ability to buy "fake IDs" from pirate strongholds
      * Made jammers into activated outfits that increase cloaking
      * Added Soromid organic ships that level up organs
      * Improved and expanded NPC portraits
      * Commodities can be sold/bought everywhere
      * Added a "slow mode", which runs the game at half speed (like an easy mode)
      * Added a ship log which records events
      * Added a "system map" which displays information about known remote planets
      * Added support for giving commands to individual escorts
      * New intro images replacing old placeholders
      * Increased pirate name variety for bounty missions
      * Ships now travel with you automatically for free, as with outfits
      * Added map decorators showing locations of factions and the Nebula
      * Added a dogfight aiming helper
      * More music